Corretions in Drops e Steps.